# jcramda

./: .gitignore  .pylintrc  Readme.md  pyproject.toml  requirements.txt  setup.py
jcramda/: __init__.py  __init__.pyi  base.pyi  comparison.py  core.pyi  enumtools.py  jcramda.pyi  mapping.py  sequence.py  test_enumtools.py  test_mapping.py  text.py
jcramda/base/: __init__.py  __init__.pyi  comparison.py  comparison.pyi  datetimes.py  datetimes.pyi  enumtools.py  enumtools.pyi  functions.py  functions.pyi  mapping.py  mapping.pyi  sequence.py  sequence.pyi  test_functions.py  test_mapping.py  test_sequence.py  text.py  text.pyi
jcramda/core/: __init__.py  _curry.py  compose.py  itertools.py  itertools.pyi  mapping.py  operator.py  test_curry.py  test_itertools.py  test_operator.py
tests/: test_curry.py  test_datetime.py  test_enumtools.py  test_functions.py  test_itertools.py  test_mapping.py  test_operator.py  test_sequence.py  test_text.py  test_with_pd.py
