[tool.poetry]
name = "jcramda"
version = "0.1.0"
description = "functional programming tools in python"
authors = ["Jochen.He <thjl@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
