[tool.poetry]
name = "jcramda"
version = "1.0.6"
description = "functional methods"
authors = ["Jochen.He <thjl@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.12.0"
pytz = "^2021.3"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
